--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,21 @@
-<p>Dashboard</p>
+<div *ngIf='isLogged'>
+    <p>Dashboard</p>
+    <p>user email:{{userEmail}}</p>
+    <button mat-raised-button (click)='logout()'>Log out</button>
+    <button mat-raised-button color='primary' (click)='createNote()'>Create note</button>
+    <h2 *ngFor='let note of notes'>
+        <mat-checkbox class="example-margin"
+                  [checked]="note.done"
+                  color=primary
+                  (change)="changeStatus($event.checked, note.id)"
+                  >
+      {{note.description}}
+    </mat-checkbox>
+    </h2>
+</div>
+<div *ngIf='loading'>
+    <mat-spinner></mat-spinner>
+</div>
+<!-- <button mat-raised-button (click)='printData()'>Get</button> -->
+
+
