--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -18,6 +18,8 @@
             <div class="bottomButton">
                 <button class="mainButton" (click)='login()' [disabled]='!isValid'>Login</button>
             </div>
+            <button mat-raised-button (click)='loginWithGoogle()'>Login with Google</button>
+            <button mat-raised-button (click)='logout()'>Log out</button>
             <a routerLink='/register'>
                 <button class="secondButton">Go to Register</button>
             </a>
